# SortVisualizer

./: CMakeLists.txt  README.md  main.cpp
Headers/: Sort.h  SortVisualizer.h  Value.h
Sources/: Sort.cpp  SortVisualizer.cpp  Value.cpp
cmake_modules/: SFMLConfig.cmake
